--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'com.google.protobuf'
 android {
     useLibrary 'org.apache.http.legacy'
 
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
         applicationId "kr.ac.inha.mindscope"
         minSdkVersion 23
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 9
         versionName '2.5'
     }
@@ -20,6 +20,11 @@ android {
     }
     productFlavors {
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    buildToolsVersion '30.0.1'
 }
 protobuf {
     protoc { artifact = 'com.google.protobuf:protoc:3.5.1-1' }
@@ -43,7 +48,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     implementation 'com.jjoe64:graphview:4.2.2'
-    implementation('org.apache.httpcomponents:httpmime:4.3') {
+    implementation('org.apache.httpcomponents:httpmime:4.5.6') {
         exclude module: "httpclient"
     }
     implementation('com.omertron:themoviedbapi:4.2') {
