--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,15 @@
     <application
         android:allowBackup="false"
         android:icon="@drawable/icon_low"
-        android:roundIcon="@drawable/icon_low"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:roundIcon="@drawable/icon_low"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         tools:targetApi="n">
-        <activity android:name=".InterventionSaveActivity"
-            android:theme="@style/AppThemeNoActionBar"
-            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".InterventionSaveActivity"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppThemeNoActionBar" />
         <activity
             android:name=".StressReportActivity"
             android:theme="@style/AppThemeNoActionBar" />
@@ -49,9 +50,6 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".old.ViewFilesActivity"
-            android:theme="@style/AppTheme" />
-        <activity
             android:name=".AuthenticationActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
@@ -74,6 +72,13 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <receiver
+            android:name=".receivers.AppUseNotifierReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="kr.ac.inha.nsl.ET_Notification" />
+            </intent-filter>
+        </receiver>
         <receiver android:name=".receivers.GeofenceReceiver" />
         <receiver android:name=".receivers.ActivityRecognitionReceiver" />
         <receiver android:name=".receivers.ActivityTransitionsReceiver" />
@@ -126,12 +131,14 @@
             android:name="org.apache.http.legacy"
             android:required="false" />
     </application>
+
     <uses-feature android:name="android.hardware.sensor.stepdetector" />
     <uses-feature android:name="android.hardware.sensor.stepcounter" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
