Developing(keep)- audio access during call using AccessibilityService

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,18 @@ protobuf {
         }
     }
 }
+
+configurations.all{
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if(requested.group == "androidx.appcompat"){
+            if(!requested.name.startsWith("multidex")){
+                details.useVersion "1.+"
+            }
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
