newCampaign-0814.0 1) Fixed a bug that sometimes terminated when accessed by clicking notifications in the background of the app 2) Removed some of the code needless.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,10 +33,9 @@
         <activity
             android:name=".FirstStartActivity"
             android:theme="@style/AppThemeNoActionBar" />
-        <!-- android:theme="@android:style/Theme.NoTitleBar.Fullscreen"> -->
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/SplashTheme">
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
