--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 ext {
     sourceCompatibility = JavaVersion.VERSION_1_8
+    defaultVersionCode = 1
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
