For pilot testing, versionName is 1.0.0
1) Changed the period of STEP 0, 1, 2
2) versionName is invisible
3) Changed INTRO phrase

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 30
         versionCode defaultVersionCode
-        versionName 'newCampaign-0817.0'
+        versionName '1.0.0'
     }
     buildTypes {
         release {
