2021-02-19/jeongin/마이크 권한 설정 추가 강제 종료 해결을 위한 마이크 권한 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -149,6 +149,10 @@
             android:exported="true" />
         <service android:name=".services.MainService" />
         <service
+            android:name=".services.MainService"
+            android:foregroundServiceType="location|camera|microphone" />
+
+        <service
             android:name=".services.LocationService"
             android:foregroundServiceType="location" />
         <service android:name=".services.SaveGPSStats" />
