--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,11 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.11'
-        classpath 'com.google.gms:google-services:4.3.3'
+        //classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.3.5'
+        // Add the Crashlytics Gradle plugin (be sure to add version
+        // 2.0.0 or later if you built your app with Android Studio 4.1).
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -29,6 +33,7 @@ allprojects {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        google()
         maven{
             url 'https://jitpack.io'
         }
